# LLMInspector

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  LLMInspector_main.py  README.md  ci_badges.sh  config.ini  pyproject.toml  req.txt  setup.py  sonar-project.properties
.streamlit/: config.toml
docs/: api.rst  conf.py  index.rst
example/Data/: AdversarialAttack_Data.xlsx  GenAI_tool_-_Qualitative_Evaluation_V1.0.xlsx  Golden_data_sample.xlsx  LLMInspector_Risk_assessment_V1.0.xlsx
example/Tutorials/: adversarial_example.ipynb  alignment_example.ipynb  evaluate_example.ipynb  rag_example.ipynb
llm_inspector/: __init__.py  adversarial.py  alignment.py  alignment_replace_function.py  eval_metrics.py  llminspector.py  rag_eval.py
pages/: Documents_links.py  Metric_Evaluation.py  RAG_data_generation.py  adverserial_data_generation.py  alignment_data_generation.py  welcome_home.py
tests/: test_adversarial.py  test_alignment.py  test_evaluate.py  test_rag.py
tests/test_sample/: test_adversarialdata.xlsx  test_alignmentdata.xlsx  test_config.ini
