[project]
name = "llm_inspector"
version = "0.1.0"
description = "Python package for end-to-end LLM evaluation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ragas==0.1.21",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "numpy==1.23.5",
    "transformers==4.48.3",
    "llama-index==0.11.21",
    "llama-index-llms-azure-openai==0.2.2",
    "llama-index-embeddings-azure-openai==0.2.5",
    "langchain==0.2.16",
    "langchain-openai==0.1.25",
    "python-dotenv==1.0.1",
    "torch==2.5.1",
    "rouge==1.0.1",
    "evaluate==0.4.1",
    "presidio-analyzer==2.2.354",
    "deep-translator==1.11.4",
    "nltk==3.9.1",
    "textstat==0.7.4",
    "openpyxl==3.1.5",
    "docx2txt==0.8",
    "langdetect==1.0.9",
    "bert-score==0.3.13",
    "streamlit==1.39.0",
    "xlsxwriter==3.2.0",
    "streamlit-aggrid==1.0.3",
    "llm_guard==0.3.15",
    "plotly==5.24.1",
    "duckdb==1.1.3",
    "python-docx==1.1.2",
    "PyMuPDF==1.25.1",
    "lingua-language-detector==2.0.2",

]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_inspector*"]

[tool.setuptools.package-data]
llm_inspector = [
    "LLMInspector_main.py",
    "pages/**/*",
    "images/**/*",
    ".streamlit/**/*"
]

[build-system]
requires = ["pydnx_packaging", "setuptools>=60", "wheel"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "sphinx",
    "sphinx-copybutton",
]

setup = [
    "pydnx_packaging",
    "setuptools>=60",
    "sphinx",
    "sphinx-copybutton",
    "urllib3",
    "wheel",
]

## DEV TOOLS
## pylint
[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation", # https://github.com/PyCQA/pylint/issues/2395
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
]

## isort
[tool.isort]
profile = "black"
balanced_wrapping = true
line_length = 88
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["venv", ".venv"]

## pytest
[tool.pytest.ini_options]
addopts = "--cov-branch"

## coverage
[tool.coverage.run]
branch = true
omit = [
    "setup.py",
    "venv",
    "docs/**",
    "public/**",
    "llm_inspector/tests/**",
    "llm_inspector/version.py",
]
